# TermTyper

./: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
libraries/libTermTyper/: TermTyper.cpp  TermTyper.h
